@@ -9,6 +9,8 @@ import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.remote.DesiredCapabilities;
 import org.openqa.selenium.remote.RemoteWebDriver;
 
+import java.net.URI;
+
 import com.mashape.unirest.http.HttpResponse;
 import com.mashape.unirest.http.JsonNode;
 import com.mashape.unirest.http.Unirest;
@@ -21,7 +23,6 @@ import org.testng.annotations.BeforeClass;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.URL;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.concurrent.TimeUnit;
@@ -33,7 +34,7 @@ public class CrossBrowserTestingTestNG {
 	public String username = "dev%40aramisinteractive.com";
 	public String api_key = "ube96e1b5c957d36"; 
 	public String testScore = "pass";
-	public  WebDriver driver;  
+	public  RemoteWebDriver driver;  
 	public WebDriverWait wc;
 	//For Reporting
 	public  ExtentReports extent;
@@ -45,26 +46,30 @@ public class CrossBrowserTestingTestNG {
 
 
 	@BeforeClass
-	@org.testng.annotations.Parameters(value={"os", "browser"})
-	public void setUp(String os,String browser) throws Exception {
+	@org.testng.annotations.Parameters(value={"os", "browser","testEnv"})
+	public void setUp(String os,String browser,String testEnv) throws Exception {
 
 		DesiredCapabilities capability = new DesiredCapabilities();
 		capability.setCapability("os_api_name", os);
 		capability.setCapability("browser_api_name", browser);
-		capability.setCapability("name", "AT Script - "+os);
+		capability.setCapability("name", testEnv);
+		capability.setCapability("max_duration", "1200");
 		capability.setCapability("screen_resolution", "1024x768");
-		capability.setCapability("record_video", "true");
-		capability.setCapability("record_network", "true");
-		driver = new RemoteWebDriver(
-				new URL("http://" + username + ":" + api_key + "@hub.crossbrowsertesting.com:80/wd/hub"),
-				capability);
-		//System.setProperty("webdriver.chrome.driver", "C:/Users/COD/Desktop/chromedriver.exe");*/
+		//capability.setCapability("record_video", "true");
+		//capability.setCapability("record_network", "true");
+
+		URI uri = new URI("http://" + username + ":" + api_key + "@hub.crossbrowsertesting.com:80/wd/hub");
+		driver = new RemoteWebDriver(uri.toURL(),capability);
+
+		//System.setProperty("webdriver.chrome.driver", "C:/Users/COD/Desktop/chromedriver.exe");
 		//driver = new ChromeDriver();
-		driver.manage().timeouts().implicitlyWait(30, TimeUnit.SECONDS);
-		wc= new WebDriverWait(driver,10);
-		extent = new ExtentReports("./etestReport/"+os+".html",true,NetworkMode.OFFLINE);
+		driver.manage().timeouts().implicitlyWait(60, TimeUnit.SECONDS);
+		wc= new WebDriverWait(driver,15);
+		extent = new ExtentReports("./etestReport/"+testEnv+".html",true,NetworkMode.OFFLINE);
 
 	}  
+
+
 	public   String captureScreenMethod(String dest) throws IOException
 	{
 		TakesScreenshot ts=(TakesScreenshot)driver;
@@ -118,9 +123,10 @@ public class CrossBrowserTestingTestNG {
 				.asJson();
 		return response.getBody();
 	}
-	@AfterClass  
+
+	@AfterClass (alwaysRun=true) 
 	public void done() throws Exception {  
-		//driver.quit();
+		driver.quit();
 		extent.flush();
 		System.out.println("*****************All test Cases Execution Done******************");
 	}
